# Yandex_bootcamp_airflow_template

./: .env.example  .gitignore  Makefile  README.md  docker-compose.s3.yaml  docker-compose.yml  pyproject.toml
dags/test/: test_minio.py
dockerfiles/airflow/: Dockerfile  requirements.txt
