[tool.poetry]
name = "yandexairflowtemplate"
version = "0.1.0"
description = ""
authors = ["Dmitry <kachkindmitry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.950"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
apache-airflow = "^2.7.2"
scikit-learn = "^1.3.1"
mlflow = "^2.7.1"
apache-airflow-providers-postgres = "^5.7.0"
apache-airflow-providers-amazon = "^8.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
